+ Added support for new CSS keywords (Class-CSS.php)   + Cancel inheritance ('unextend' keyword, useful for inherited stylings)   + Delete a property entirely ('@remove' command) + Added support for all possible unit types in math functions. Also removed the mismatched unit protection code, because I'm not sure whether it's best to keep it to not. I'd have to rewrite it anyway. (Class-CSS.php) * Optimized grad700.png for size, moved original to the image backup folder, as well as the original iPhone and Tablet icons. (other/images/*, grad700.png) * Updated credits. Project managers are Wedgeward (still us!), added tentative Consultant and Support teams to Wedge credits. Made page more readable. (Credits.php, sections.css) + Added support for browser-agnostic linear-gradient call. (Although older Safari versions and IE6/7/8/9 will choke on it.) Also simplified call to the CSS property fixer. (Subs-Cache.php) * Replaced 'create_topic' hook with the more interesting 'create_post_before' and 'create_post_after'. (Subs-Post.php) + Added 'modify_post_before' and 'modify_post_after' hooks. Guess what they do. (Subs-Post.php) + Added dummy example for a CSS section in styling file. (Warm/settings.xml)

--- a/Themes/default/styles/sections.css
+++ b/Themes/default/styles/sections.css
@@ -773,10 +773,15 @@ tr.approvebg td,
 tr.highlight2 td
 	padding: .3em .7em
 
-#credits p
-	padding: 0
-	font-style: italic
-	margin: 0
+#credits
+	p
+		padding: 0
+		font-style: italic
+		margin: 0
+	dl
+		line-height: 1.5em
+	dd
+		padding: 5px 0
 
 /* Styles for generic tables.
 ------------------------------------------------------- */
